Convert project to .NET 8.0 and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,17 @@ FodyWeavers.xsd
 
 # Rider
 .idea/
+
+# Mac OS files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
